[package]
name = "plannrs"
version = "0.1.0"
edition = "2024"
authors = ["Alexis Williams <107479436+abstralexis@users.noreply.github.com>"]
license = "AGPL-3.0-or-later"
readme = "README.md"
repository = "https://https://github.com/abstralexis/plannrs"

[lints.clippy]
pedantic = "warn"

[dependencies]
chrono = "0.4.42"
color-eyre = "0.6.5"
crossterm = "0.29.0"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive", "serde_derive"] }
serde_derive = "1.0.228"
toml = { version = "0.9.11", features = ["serde"] }
tui-textarea = "0.7.0"
